# ish

./: .gitignore  Dockerfile  LICENSE  cabal.project  ish.cabal  mood-viz-sampler.jsx
.github/workflows/: ci.yml  deploy.yml
app/: Main.hs
data/: ish_data.csv  load.py
db/: ish.db-journal  schema.sql  seed.py
src/Ish/: Api.hs  App.hs  Db.hs  Types.hs
src/Ish/Analysis/: Api.hs  Cluster.hs  DataFrame.hs  Fuzzify.hs  Fuzzy.hs  Gaps.hs  Mamdani.hs  Server.hs
src/Ish/Entries/: Api.hs  Server.hs
test/: Main.hs
test/Ish/: DbSpec.hs  Fixtures.hs  TypesSpec.hs
test/Ish/Analysis/: ClusterSpec.hs  DataFrameSpec.hs  FuzzifySpec.hs  FuzzySpec.hs  GapsSpec.hs  MamdaniSpec.hs
